added nodemailer module

--- a/email/package.json
+++ b/email/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "routing",
+  "name": "email",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -10,9 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^2.6.1",
     "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "multer": "^1.4.1"
+    "nodemailer": "^6.3.1"
   }
 }
